<resources>
    <string name="current_version_info">The Current APP Version is 1.0.7</string>
    <string name="more_new_soft_version_info">This is the latest version</string>
    <string name="app_name">WCS</string>
    <string name="action_settings">Set</string>
    <string name="device_info">Device Info</string>
    <string name="param_setting">Settings</string>
    <string name="historical_data">Record</string>
    <string name="real_time_monitoring">Monitoring</string>
    <string name="battery_board_parameter">PV Parameter</string>
    <string name="solar_panel_voltage">PV Voltage</string>
    <string name="solar_panel_electricity">PV Current</string>
    <string name="charging_power">Charge Power</string>
    <string name="battery_plate_state">PV Status</string>
    <string name="battery_parameters">Battery Parameter</string>
    <string name="battery_esidual_capacity">Battery Capacity</string>
    <string name="battery_voltage">Battery Voltage</string>
    <string name="charging_electricity">Charge Current</string>
    <string name="battery_temperature">Battery Temp.</string>
    <string name="battery_state">Battery Status</string>
    <string name="charging_state">Charge Status</string>
    <string name="load_parameters">Load Parameter</string>
    <string name="load_voltage">Load Voltage</string>
    <string name="load_switch">Load Switch</string>
    <string name="load_electricity">Load Current</string>
    <string name="load_power">Load Power</string>
    <string name="load_state">Load Status</string>
    <string name="last_day">Last Day</string>
    <string name="next_day">Next Day</string>
    <string name="day_consumption_power">Power Use Same Day</string>
    <string name="day_production_power">Power Generate</string>
    <string name="day_discharge_amp_hour">Discharge Ah</string>
    <string name="day_charge_amp_hour">Charge Ah Same Day</string>
    <string name="day_discharge_max_power">Max Disc Power</string>
    <string name="day_charge_max_power">Max Char Power</string>
    <string name="day_battery_max_voltage">Max Battery Volt</string>
    <string name="day_battery_min_voltage">Min Battery Volt</string>
    <string name="all_run_days">Running Days Total</string>
    <string name="battery_all_discharge_times">Battery Over Disc Times</string>
    <string name="battery_charge_full_times">Battery Full Charge Times</string>
    <string name="battery_charge_all_apm_hour">Battery Char Ah Total</string>
    <string name="battery_discharge_all_apm_hour">Battery Disc Ah Total</string>
    <string name="all_production_power">Generation Amount</string>
    <string name="all_consumption_power">Consumption Amount</string>
    <string name="readin">Read</string>
    <string name="setting">Set</string>
    <string name="device_id">Device ID</string>
    <string name="device_type">Device Model No.:</string>
    <string name="device_version">Device Version</string>
    <string name="device_sn_code">Device Sn Code</string>
    <string name="device_status">Device Status</string>
    <string name="added_device">Add Device</string>
    <string name="check_update">Update Check</string>
    <string name="voltage">Voltage</string>
    <string name="v_power">Power</string>
    <string name="apm_hour">Ah</string>
    <string name="electricity">Current</string>
    <string name="in_common_use_param">General Parameter</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="all">All</string>
    <string name="base_year_chart_summary">Diagram of Year</string>
    <string name="base_month_chart_summary">Diagram of Month</string>
    <string name="all_chart_summary">All Diagrams</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="more_high_voltage">Max Voltage</string>
    <string name="more_low_voltage">Min Voltage</string>
    <string name="discharge_max_power">Max Disc Power</string>
    <string name="charge_max_power">Max Charge Power</string>
    <string name="charge_apm_hour">Charge Ah</string>
    <string name="discharge_apm_hour">Disc Ah</string>
    <string name="consumption_power">Consumption Power</string>
    <string name="production_power">Generation Power</string>
    <string name="your_device_not_supported">Your device doesn\'t support this APP</string>
    <string name="your_device_bluetooth_not_supported">Your device doesn\'t support Bluetooth</string>
    <string name="scan_device">Search Device</string>
    <string name="times">Times</string>
    <string name="min_value">Min Value</string>
    <string name="max_value">Max Value</string>
    <string name="ave_value">Ave Value</string>
    <string name="scan_device_dialog_title">Devices found:</string>
    <string name="system_voltage_set">System Voltage(V)</string>
    <string name="in_senior_use_param">Advanced Setting</string>
    <string name="nominal_capacity_of_battery_set">Battery Rated Ah(AH)</string>
    <string name="battery_type_set">Battery Type</string>
    <string name="over_voltage_voltage_set">High Volt Disconnect(V)</string>
    <string name="charge_imit_oltage_set">Charge Limit Voltage(V)</string>
    <string name="balanced_charge_voltage_set">Equalize Charge Volt(V)</string>
    <string name="lift_charge_voltage_set">Boost Charge Volt(V)</string>
    <string name="float_charging_voltage_set">Float Charge Volt(V)</string>
    <string name="lift_charge_return_voltage_set">Boost Char Return Volt(V)</string>
    <string name="over_discharge_return_voltage_set">Over Disc Reture Volt(V)</string>
    <string name="warning_under_voltage_set">Low Voltage Alarm(V)</string>
    <string name="load_operating_mode_set">Load Mode</string>
    <string name="optical_control_delay_time_set">Light Control Delay Time(Min)</string>
    <string name="optical_control_voltage_set">Light Control Volt(V)</string>
    <string name="first_working_time_set">1st Work Time(H)</string>
    <string name="first_working_power_set">1st Work Time Power(%)</string>
    <string name="second_working_time_set">2nd Work Time(H)</string>
    <string name="second_working_power_set">2nd Work Time Power(%)</string>
    <string name="third_working_power_set">3rd Work Time Power(%)</string>
    <string name="third_working_time_set">3rd Work Time(H)</string>
    <string name="morning_working_power_set">Morning Lighiting Power(%)</string>
    <string name="morning_working_time_set">Morning Lighting Time(H)</string>
    <string name="over_discharge_voltage_set">Over Dishcarge Volt(V)</string>
    <string name="discharge_limit_voltage_set">Discharge Limit Volt(V)</string>
    <string name="over_discharge_delay_time_set">Over Disc Delay Time(S)</string>
    <string name="equalization_charging_time_set">Equalize Charge Time(Min)</string>
    <string name="promote_charging_time_set">Boost Charge Time(Min)</string>
    <string name="equilibrium_charge_interval_set">Equalize Charge Interval</string>
    <string name="temperature_compensation_coefficient_set">Temperature Compensation\n(mv/℃/2V)</string>
    <string name="battery_state_val00h">Charge not ready</string>
    <string name="battery_state_val01h">Start charge </string>
    <string name="battery_state_val02h">MPPT charge mode</string>
    <string name="battery_state_val03h">Equalize charge mode</string>
    <string name="battery_state_val04h">Boost charge mode</string>
    <string name="battery_state_val05h">Float charge mode</string>
    <string name="battery_state_val06h">Current constant mode</string>
    <string name="battery_type_val01h">FLD</string>
    <string name="battery_type_val02h">SLD</string>
    <string name="battery_type_val03h">GEL</string>
    <string name="battery_type_val04h">LI</string>
    <string name="battery_type_val00h">USER</string>
    <string name="load_operating_mode_val00h">Light Control</string>
    <string name="load_operating_mode_val01h">Light Control 1 hour</string>
    <string name="load_operating_mode_val02h">Light Control 2 hour</string>
    <string name="load_operating_mode_val03h">Light Control 3 hour</string>
    <string name="load_operating_mode_val04h">Light Control 4 hour</string>
    <string name="load_operating_mode_val05h">Light Control 5 hour</string>
    <string name="load_operating_mode_val06h">Light Control 6 hour</string>
    <string name="load_operating_mode_val07h">Light Control 7 hour</string>
    <string name="load_operating_mode_val08h">Light Control 8 hour</string>
    <string name="load_operating_mode_val09h">Light Control 9 hour</string>
    <string name="load_operating_mode_val0ah">Light Control 10 hour</string>
    <string name="load_operating_mode_val0bh">Light Control 11 hour</string>
    <string name="load_operating_mode_val0ch">Light Control 12 hour</string>
    <string name="load_operating_mode_val0dh">Light Control 13 hour</string>
    <string name="load_operating_mode_val0eh">Light Control 14 hour</string>
    <string name="load_operating_mode_val0fh">Manual mode</string>
    <string name="load_operating_mode_val10h">Testing mode</string>
    <string name="load_operating_mode_val11h">Always-on mode</string>
    <string name="controller_info_none">Normal</string>
    <string name="controller_info_byte0">Battery over disc</string>
    <string name="controller_info_byte1">Battery high volt</string>
    <string name="controller_info_byte2">Batt low volt alart</string>
    <string name="controller_info_byte3">Load short circ</string>
    <string name="controller_info_byte4">Load over current</string>
    <string name="controller_info_byte5">Device over heating</string>
    <string name="controller_info_byte6">Outer temp over limit</string>
    <string name="controller_info_byte7">Over PV input</string>
    <string name="controller_info_byte8">PV input short circ</string>
    <string name="controller_info_byte9">PV input over volt</string>
    <string name="controller_info_byte10">PV anti current</string>
    <string name="controller_info_byte11">PV work volt over limit</string>
    <string name="controller_info_byte12">PV anti connection</string>
    <string name="controller_info_byte13">Anti-reverse MOS short</string>
    <string name="controller_info_byte14">circuit, charge MOS short circuit</string>
    <string name="can_not_connect_device_info">No device connection, please add device．</string>
    <string name="disconnect_device_info">Device disconnect</string>
    <string name="connect_device_device_success">Device connecting %s </string>
    <string name="device_param_setting_success">Set successfully</string>
    <string name="device_param_getting_success">Read successfully</string>
    <string name="device_param_setting_failed">Set failure</string>
    <string name="device_param_getting_failed">Read failure</string>
    <string name="device_param_setting_nothing">Invalid operation, no parameter set</string>
    <string name="opened">Open</string>
    <string name="closed">Close</string>
    <string name="automatic_recognition">Auto recogniton</string>
    <string name="init_null_charter">--</string>
    <string name="centigrade">℃</string>
    <string name="device_connect_state">Connection status</string>
    <string name="device_connected">Device connected</string>
    <string name="device_disconnected">Device disconnected</string>
    <string name="disconnected_device">Disconnect device</string>
    <string name="prompt">Hint</string>
    <string name="get_admin">Administrator</string>
    <string name="please_input_the_password">Please input the password</string>
    <string name="correct_password">password is correct</string>
    <string name="incorrect_password">Password is not correct</string>
    <string name="recovery_device">Restore factory default</string>
    <string name="please_get_admin">Please get administrator privileges</string>
    <string name="restore_factory_success">Restore factiory success</string>
</resources>