<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/alpha"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_style_corner_popwin"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="8.0dip"
        android:paddingLeft="14.0dip"
        android:paddingRight="14.0dip"
        android:paddingTop="8.0dip" >

        <TextView
            style="@style/more_new_soft_version_info_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_version_info" />
<!-- "@drawable/bg_style_corner_popwin" -->
        <LinearLayout
            android:id="@+id/layout_picker"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:background="@color/alpha"
            android:padding="1dp"
            android:orientation="horizontal" >

       
        <TextView
            style="@style/more_new_soft_version_info_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/more_new_soft_version_info" />
        
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:background="@color/alpha"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="82dip"
                android:layout_height="34dp"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:background="@drawable/btn_cancel_drawable"
                android:text="@string/cancel"
                android:textColor="@color/cancel_text_color"
                android:textSize="16.0sp" />

            <View
                android:layout_width="0dip"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/alpha" />

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="82dip"
                android:layout_height="34dp"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_affirm_drawable"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>