<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:dash="http://schemas.android.com/apk/res/com.wcsmobile"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:background="@color/light_yellow"
            android:orientation="horizontal" >

            <com.wcsmobile.widget.LargeTouchableAreasImageButton
                android:id="@+id/btnExit"
                android:layout_width="15.0dip"
                android:layout_height="15.0dip"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:clickable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_back_drawable"
                dash:addition="50dp" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/app_text_title_bold_style"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/historical_data" />
        </LinearLayout>
        <!--
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1.0dip"
            android:scaleType="fitXY"
            android:src="@drawable/color_line" />
        -->
    </LinearLayout>

    <com.wcsmobile.widget.SegmentedGroup
        android:id="@+id/segment_Group"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="0.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="10.0dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="5dp" >

        <!--
        <RadioButton
            android:id="@+id/rdbtn_day"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#ffe4e402"
            android:button="@null"
            android:gravity="center"
            android:minHeight="40.0dip"
            android:minWidth="280.0dip"
            android:text="@string/day"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/radio_colors" />
        -->

        <RadioButton
            android:id="@+id/rdbtn_month"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#ffe4e402"
            android:button="@null"
            android:gravity="center"
            android:minHeight="40.0dip"
            android:minWidth="280.0dip"
            android:text="@string/month"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/radio_colors" />

        <RadioButton
            android:id="@+id/rdbtn_year"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#ffe4e402"
            android:button="@null"
            android:gravity="center"
            android:minHeight="40.0dip"
            android:minWidth="280.0dip"
            android:text="@string/year"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/radio_colors" />

        <RadioButton
            android:id="@+id/rdbtn_all"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="#ffe4e402"
            android:button="@null"
            android:gravity="center"
            android:minHeight="40.0dip"
            android:minWidth="280.0dip"
            android:text="@string/all"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/radio_colors" />
    </com.wcsmobile.widget.SegmentedGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="12.0dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_historicalchart_title"
            style="@style/historicalchart_layout_text_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/day_production_power" />

        <com.wcsmobile.widget.LargeTouchableAreasImageButton
            android:id="@+id/btn_set_date"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/f_btn_style_head"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_triangle"
            dash:addition="50dp" />

        <TextView
            android:id="@+id/tv_historicalchart_date"
            style="@style/historicalchart_layout_text_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/btn_set_date"
            android:text="@string/day_production_power" />
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />

    <!--
         <RadioGroup
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/f_btn_style_head"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <RadioButton
            android:id="@+id/rb_voltage"
            style="@style/light_tab"
            android:background="@drawable/f_btn_style_head"
            android:drawableTop="@drawable/real_time_monitoring_selector"
            android:text="@string/voltage" />

        <RadioButton
            android:id="@+id/rb_v_power"
            style="@style/light_tab"
            android:background="@drawable/f_btn_style_head"
            android:drawableTop="@drawable/historical_data_selector"
            android:text="@string/v_power" />

        <RadioButton
            android:id="@+id/rb_apm_hour"
            style="@style/light_tab"
            android:background="@drawable/f_btn_style_head"
            android:drawableTop="@drawable/param_setting_selector"
            android:text="@string/apm_hour" />

        <RadioButton
            android:id="@+id/rb_electricity"
            style="@style/light_tab"
            android:background="@drawable/f_btn_style_head"
            android:drawableTop="@drawable/device_info_selector"
            android:text="@string/electricity" />
    </RadioGroup>
    -->

</LinearLayout>